# ghw-trivia

./: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  PHASE_COMPLETION_REPORT.md  README.md  TASK_GENERATION_REPORT.md  demo.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: speckit.tasks.prompt.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
migrations/: env.py
migrations/versions/: 22c4d80f2edf_initial_schema_sessions_attempts_scores.py
specs/001-trivia-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-trivia-api/checklists/: requirements.md
specs/001-trivia-api/contracts/: openapi.yaml
src/trivia_api/: config.py  database.py  errors.py  main.py
src/trivia_api/api/: answer.py  attempts.py  leaderboard.py  question.py  session.py
src/trivia_api/models/: __init__.py  answer.py  attempt.py  leaderboard.py  session.py
src/trivia_api/schemas/: __init__.py  attempt.py  session.py  user_score.py
src/trivia_api/services/: answer_service.py  attempt_service.py  leaderboard_service.py  session_service.py  user_score_service.py
src/trivia_api/utils/: auth.py  timestamps.py  validators.py
